@@ -8,6 +8,9 @@
  * Add a separate HTTPProxyUnauthorized exception for 407 errors.
    (Jelmer Vernooĳ, #822)
 
+ * Split out a AbstractHTTPGitClient class.
+   (Jelmer Vernooĳ)
+
 0.20.23	2021-05-24
 
  * Fix installation of GPG during package publishing.
